[tool.poetry]
name = "aiogtools"
version = "0.1.0"
description = "Aiotools kit for aiogram:^3.0.0 framework"
authors = ["yeghorkikhai <yeghorkikhai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
